<resources>
    <string name="app_name">SeriesTracker</string>

    <string name="title_section1">Tonight Tv Shows</string>
    <string name="title_section2">Followed</string>
    <string name="title_section3">Last Subtitles</string>
    <string name="title_section4">News</string>
    <string name="title_section5">Show Research</string>
    <string name="title_section6">Credits</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_main">SeriesTracker</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
